--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "bootstrap": "^5.2.3",
+    "ejs": "^3.1.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^6.5.1",
-    "next": "13.0.3",
+    "next": "^13.0.5",
     "openai": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
+    "yarn": "^1.22.19"
   }
 }
