--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-spring/parallax": "^9.5.5",
     "bootstrap": "^5.2.3",
     "ejs": "^3.1.8",
     "eslint": "8.27.0",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-scroll-parallax": "^3.3.2",
     "yarn": "^1.22.19"
   }
 }
