--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "react-dom": "^18.2.0",
     "react-scroll-parallax": "^3.3.2",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.20",
+    "typescript": "^5.3.3"
   }
 }
